Adds better dev command with watching and auto-reloading

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,12 +7,19 @@
   "author": "GraphQLBase",
   "license": "MIT",
   "scripts": {
-    "up": "webpack --mode development",
+    "build": "webpack --mode development",
     "server": "node ./dist/server.js",
-    "dev": "yarn server",
+    "up": "yarn build",
     "lint": "eslint src/**/*.*",
     "test": "jest",
-    "build:production": "webpack --mode production"
+    "build:production": "webpack --mode production",
+    "dev": "run-p dev:nodemon dev:browsersync dev:watch",
+    "dev:nodemon": "nodemon --watch dist ./dist/server.js",
+    "dev:browsersync": "browser-sync start --proxy localhost:3002 --port 5000 --notify",
+    "dev:watch": "chokidar \"+(src|test)/**/*\" -c \"yarn dev:start\"",
+    "dev:start": "run-s dev:prepare dev:reload",
+    "dev:prepare": "run-p lint build",
+    "dev:reload": "browser-sync reload --port 5000"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
@@ -21,12 +28,16 @@
     "@types/node": "^9.4.4",
     "@types/webpack": "^3.8.5",
     "babel-loader": "8.0.0-beta.0",
+    "browser-sync": "^2.23.6",
+    "chokidar-cli": "^1.2.0",
     "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.2.2",
     "jest-junit": "^3.6.0",
+    "nodemon": "^1.14.12",
+    "npm-run-all": "^4.1.2",
     "prettier": "^1.10.2",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.1",
