--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -39,6 +39,7 @@ group :development, :test do
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '~> 2.13'
   gem 'selenium-webdriver'
+  gem 'rubocop' #, '~> 0.52.1'
 end
 
 group :development do
